# world_happiness_metrics

./: .gitignore  README.md  clean_datasets.py  download_data.py  exploration.py  pyproject.toml
src/: correlation.ipynb  correlation.py  download_data.py  main.py  significance_analysis.py
