[project]
name = "world-happiness-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipdb>=0.13.13",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
]
